kong_gateway/kong-service-restrictor.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end
  labels:
    app: front-end
  annotations:
    konghq.com/plugins: ip-restriction-example
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: front-end
  selector:
    app: front-end
