kong_gateway/sock-shop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-end
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: ip-restriction-example
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: front-end
            port:
              number: 80
